# lexbridge-ai

./: .docs_state.json  .gitignore  AGENTS.md  FINAL_RAG_OPTIMIZATION_PLAN.md  LICENSE  RAG_LAYOUT_REVIEW.md  README.md  conferences_enriched.csv  generate_docs.py  generate_docs.py.summary.md  helper.txt  layout.md  prompt.md  requirements.txt  start_services.sh
brain_module/: README.md  ask.py  ask.py.summary.md  pyproject.toml  pyproject.toml.summary.md  questions.txt
brain_module/brain_module/: README.md  __init__.py  __init__.py.summary.md
brain_module/brain_module.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
brain_module/brain_module/aggregation/: README.md  __init__.py  __init__.py.summary.md  deduplicator.py  deduplicator.py.summary.md  rrf_merger.py  rrf_merger.py.summary.md  source_grouper.py  source_grouper.py.summary.md
brain_module/brain_module/api/: README.md  audio_routes.py  audio_routes.py.summary.md  main.py  main.py.summary.md
brain_module/brain_module/cache/: README.md  embedding_cache.py  embedding_cache.py.summary.md  query_cache.py  query_cache.py.summary.md  semantic_cache.py  semantic_cache.py.summary.md
brain_module/brain_module/compression/: README.md  __init__.py  __init__.py.summary.md  sentence_compressor.py  sentence_compressor.py.summary.md
brain_module/brain_module/evaluation/: README.md  ragas_eval.py  ragas_eval.py.summary.md
brain_module/brain_module/guardrails/: README.md  __init__.py  __init__.py.summary.md  llm_judge.py  llm_judge.py.summary.md  response_validator.py  response_validator.py.summary.md  retrieval_filter.py  retrieval_filter.py.summary.md
brain_module/brain_module/query/: README.md  __init__.py  __init__.py.summary.md  rewriter.py  rewriter.py.summary.md
brain_module/brain_module/reranking/: README.md  cross_encoder.py  cross_encoder.py.summary.md
brain_module/brain_module/response/: README.md  formatter.py  formatter.py.summary.md  schema.py  schema.py.summary.md
brain_module/brain_module/retrieval/: README.md  fetcher_registry.py  fetcher_registry.py.summary.md  lightrag_adapter.py  lightrag_adapter.py.summary.md  parallel_runner.py  parallel_runner.py.summary.md
brain_module/brain_module/router/: README.md  __init__.py  __init__.py.summary.md  complexity_scorer.py  complexity_scorer.py.summary.md  intent_classifier.py  intent_classifier.py.summary.md
brain_module/brain_module/synthesis/: README.md  __init__.py  __init__.py.summary.md  citation_parser.py  citation_parser.py.summary.md  llm_client.py  llm_client.py.summary.md  prompt_builder.py  prompt_builder.py.summary.md
data_module/: CHAT_SUMMARY.md  README.md  pyproject.toml
data_module/config/: README.md  pipeline.yaml  storage.yaml
data_module/config/sources/: README.md  hotpotqa.yaml  local_file.yaml  ms_marco.yaml  natural_questions.yaml  openassistant.yaml  (+5 more)
data_module/data_module/: README.md  __init__.py
data_module/data_module.egg-info/: PKG-INFO  README.md  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data_module/scripts/: README.md  export_to_neo4j.py  export_to_neo4j_admin.py
(+199 files in other folders)
